...
                            text = errorState.message,
                            style = AppTextStyles.CaptionStrong(),
                            color = AppColors.RedError,
                            modifier = Modifier
                                .fillMaxWidth()
                                .padding(horizontal = 6.dp)
                                .testTag("email-confirmation-error")
                        )
                    }

                    Spacer(modifier = Modifier.weight(1f))

                    Column(
...
                                        viewModel.handle(EmailConfirmationViewEvents.JoinExistingVault)
                                    },
                                    text = appString(AppString.join),
                                    isEnabled = !isLoading,
                                    modifier = Modifier
                                        .fillMaxWidth()
                                        .testTag("email-confirmation-join")
                                )
                                NakedButton(
                                    title = appString(AppString.emailSelectionChange),
                                    onClick = {
                                        focusManager.clearFocus()
                                        viewModel.handle(EmailConfirmationViewEvents.StartOver)
...
                                    },
                                    text = appString(AppString.emailSelectionChange),
                                    color = AppColors.Warning,
                                    isEnabled = !isLoading,
                                    modifier = Modifier
                                        .fillMaxWidth()
                                        .testTag("email-confirmation-error-reset")
                                )
                            }
                            is EmailConfirmationScreenState.Default -> {
                                ClassicButton(
                                    action = {
                                        focusManager.clearFocus()
                                        viewModel.handle(EmailConfirmationViewEvents.ContinueClicked)
                                    },
                                    text = appString(AppString.emailSelectionContinue),
                                    isEnabled = !isLoading,
                                    modifier = Modifier
                                        .fillMaxWidth()
                                        .testTag("email-confirmation-continue")
                                )
                                NakedButton(
                                    title = appString(AppString.emailSelectionChange),
                                    onClick = {
                                        focusManager.clearFocus()
                                        viewModel.handle(EmailConfirmationViewEvents.StartOver)
...
