...
                    }
                }
            },
            isVisible = isAlertVisible && !isProcessing,
            testTag = when (alertType) {
                AlertType.JoinRequest -> "alert-join-request"
                AlertType.RecoveryRequest -> "alert-recovery-request"
                null -> "alert-hidden"
            }
        )
    }

    if (isProcessing) {
...
            modifier = Modifier
                .fillMaxSize()
                .zIndex(10f)
                .testTag(
                    when (alertType) {
                        AlertType.JoinRequest -> "alert-join-request-processing"
                        AlertType.RecoveryRequest -> "alert-recovery-request-processing"
                        null -> "alert-processing"
                    }
                ),
            contentAlignment = Alignment.Center
        ) {
            CircularProgressIndicator(
...
