...
                ) {
                    Image(
                        painter = imageProvider.getPainter(AppImage.Close),
                        contentDescription = null,
                        modifier = Modifier
                            .align(Alignment.CenterEnd)
                            .testTag("show-secret-close")
                            .clickable {
                                viewModel.handle(ShowSecretEvents.HideSecret)
                                onDismiss()
                            }
                    )
                }
...
        ) {
            Text(
                text = value,
                style = AppTextStyles.Body(),
                color = AppColors.White,
                modifier = Modifier
                    .testTag("revealed-secret-value")
                    .weight(1f)
                    .padding(end = 12.dp)
            )

            Icon(
                painter = imageProvider.getPainter(AppImage.IconEyeOff),
...
